from import to link

--- a/src/template.html
+++ b/src/template.html
@@ -18,6 +18,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <link rel="import" href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap">
     <script src="https://unpkg.com/scrollreveal"></script>
     <script>
       ScrollReveal({ reset: false });
