Updated resume's link

--- a/src/template.html
+++ b/src/template.html
@@ -74,7 +74,7 @@
                 text about me - part 2
               </p>
               <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="./assets/Wellington's Resume.pdf"> 
+                <a class="cta-btn cta-btn--resume" href="https://raw.githubusercontent.com/rwellingtonr/Website/main/src/assets/Wellington's%20Resume.pdf" target="_blank"> 
                   View Resume
                 </a>
               </span>
