--- a/src/template.html
+++ b/src/template.html
@@ -68,10 +68,11 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text text-justify">
-                text about me - part 1
+                Hello, I’m Wellington Leardini Ramos <br><br>
+                I’m an Electronic Engineering who has a passion in technology and also web development. Nowadays, I’m strongly focused on the functional design, to create responsible visual, interactive elements and optimized application as well. <br>
               </p>
               <p class="about-wrapper__info-text text-justify">
-                text about me - part 2
+                I’m an enthusiastic in develop new user’s features based on UI and UX design. Using the newest technologies to ensure an optimized application for maximum speed and scalability.
               </p>
               <span class="d-flex mt-3">
                 <a class="cta-btn cta-btn--resume" href="https://raw.githubusercontent.com/rwellingtonr/Website/main/src/assets/Wellington's%20Resume.pdf" target="_blank"> 
