--- a/src/template.html
+++ b/src/template.html
@@ -11,7 +11,7 @@
     <!-- Add some coding keywords below, Ex: (javascript, yourusername, etc) -->
     <meta name="keywords" content="Well, Wellington, javascript" />
     <!-- Improve your SEO by adding a small descrption of you -->
-    <meta name="description" content="Wellingotn | Developer | Electronic Engineering" />
+    <meta name="description" content="Wellington | Developer | Electronic Engineering" />
 
     <!-- Required librarys -->
     <link
